--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   provider: ^6.1.2
   http: ^1.2.1
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.5
+  socket_io_client: ^2.0.3+1
 
 dev_dependencies:
   flutter_test:
